library/general/requiredgpuruntimeclass/samples/gpu-exempt-without-runtimeclass/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredGpuRuntimeClass
metadata:
  name: require-gpu-runtime
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    allowedRuntimeClassNames:
      - "nvidia"
    exemptImages:
      - "nvidia/dcgm-exporter:*"
